# lavaflow

./: .gitignore  .gitlab-ci.yml  CNAME  README.md  about.html  capture.html  demo.html  gitlab-ci.yml  index.html  netlify.toml  output20.gltf  package-lock.json  package.json  preview.html  select-markers.html  steam_turbine.glb  version.txt  vite-manifest.json  vite.config.ts
.github/workflows/: deploy-preview.yml  deploy.yml
.gitlab/issue_templates/: assignment.md  default.md  sprint_feature.md
.gitlab/merge_request_templates/: assignment.md  default.md
3D_model_construction/: CMakeLists.txt
3D_model_construction/3DConstructor/: Constructor.cpp
3D_model_construction_rust/: Cargo.toml
3D_model_construction_rust/src/: lib.rs  main.rs
3d/: turbine-placement.html
3d/turbine-placement/: instructions.html
_app/: manifest.json  start-cc9acaf5.js  start-ee3ad715.js  start-f1e71c02.js  version.json
_app/assets/: NavigationButton-7253cb1c.css
_app/chunks/: preload-helper-94f1d9a7.js  singletons-5be3e935.js  three.module-3b78991f.js  three.module-c1f40604.js
_app/immutable/: error.svelte-00c7b34a.js  error.svelte-0993516a.js  error.svelte-37e82108.js  error.svelte-41335b13.js  error.svelte-50e60bdd.js  error.svelte-523c515c.js  error.svelte-5e07810f.js  error.svelte-65587629.js  error.svelte-67e21893.js  error.svelte-723128e3.js  error.svelte-8471f99d.js  error.svelte-84e2b8dc.js  error.svelte-855de792.js  error.svelte-8aa526b6.js  error.svelte-a21ebff9.js  error.svelte-ab99e81d.js  error.svelte-b1bc44a0.js  error.svelte-c8df2b3e.js  error.svelte-d7c63579.js  error.svelte-dad2b384.js  error.svelte-dc5bec93.js  error.svelte-f2ee3b85.js  error.svelte-f674424b.js  layout.svelte-041939e4.js  layout.svelte-244f2c5a.js  layout.svelte-50143110.js  layout.svelte-548ea11f.js  layout.svelte-85ccdb43.js  layout.svelte-a120f3a2.js  layout.svelte-a8f8f4e2.js  layout.svelte-cd80100c.js  layout.svelte-fbc44565.js  manifest.json  (+81 more)
app/: .gitignore  error.svelte-04b3b49f.js  netlify.toml  package.json  start-f1e71c02.js  svelte.config.js  version.json  vite.config.ts
ar/: turbine-placement.html
assets/: wasm_bg.wasm
capture/: instructions.html
docs/: Moscow_requirements.md  _template_meeting.md  intruductie_college.md  kickoff_notes.md
poc/wasm-cpp/: .gitignore  CMakeLists.txt  Makefile  README.md  cmake_install.cmake
poc/wasm-cpp/src/: main.cpp
scan/: mapscanning.html  maptransform.html  preview.html
select-markers/: instructions.html
src/: index.html
svelte/: .gitlab-ci.yml  README.md  package.json
svelte-app/: .eslintrc.cjs  .gitignore  .gitlab-ci.yml  jest.config.js  package-lock.json  package.json  svelte.config.js  tailwind.config.cjs  vite.config.ts
visual/: 3d.html  ar.html
visualise/: ar.html  model.html
wasm/: .gitlab-ci.yml  .rustfmt.toml  Cargo.toml  LICENSE  LICENSE_MIT  div_iteration_0.gltf  div_iteration_1.gltf  input.gltf
wasm/.config/: nextest.toml
wasm/src/: api.rs  api_helper_fns.rs  contours.rs  generate.rs  gltf_conversion.rs  lib.rs  main.rs  obj_demo.rs  smoothing_operations.rs  utils.rs  yeet.rs
wasm/src/lava_path_finder/: lava_path.rs  mod.rs
wasm/src/model_construction/: cardinal_intersection.rs  catmull_clark.rs  constructor.rs  generate.rs  gltf_conversion.rs  lava_path.rs  level_curve_tree.rs  level_curves.rs  local_tin_interpolation.rs  mod.rs  obj_generator.rs  point.rs  raster.rs  raster_neighbour_smoothing.rs  smoother.rs  triangle.rs
wasm/src/objects/: level_curve_tree.rs  level_curves.rs  mod.rs  point.rs  raster.rs  triangle.rs
wasm/src/smoothing_operation_derive/: Cargo.toml
wasm/src/smoothing_operation_derive/src/: lib.rs
wasm/src/surface_subdivision/: catmull_clark.rs  mod.rs
(+1355 files in other folders)
