[package]
name = "wasm"
version = "0.1.0"
authors = [
	"Abel de Bruijn <a.debruijn-3@student.tudelft.nl>"
]
license = "MIT"
description = "WebAssembly part"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.5"
wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }
web-sys = { version = "0.3", features = ["console"] }

smoothing_operation_derive = { path = "./src/smoothing_operation_derive" }

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1", optional = true }

gltf = "1.0"
gltf-json = "1.0"
base64 = "0.21"
miette = "5.5"

[dev-dependencies]
wasm-bindgen-test = "0.3"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
